--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <section class="home bd-grid" id="home">
         <div class="home__data">
           <h1 class="home__title">
-            Hi,<br />I'am <span class="home__title-color">Nifad Hasan</span><br />
+            Hi,<br />I'm <span class="home__title-color">Nifad Hasan</span><br />
             Web Developer
           </h1>
 
@@ -113,7 +113,7 @@
           </div>
 
           <div>
-            <h2 class="about__subtitle">I'am Nifad Hasan</h2>
+            <h2 class="about__subtitle">I'm Nifad Hasan</h2>
             <p class="about__text">
               I am a passionate Software Engineering student at Daffodil International University, 
         currently in my 3rd semester. Alongside my academic journey, I’m developing my 
@@ -301,3 +301,4 @@
     <script src="main.js"></script>
   </body>
 </html>
+
