--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       rel="stylesheet"
     />
 
+    <link rel="icon" href="/cv.png" type="image/png">
+
     <title>Portfolio website complete</title>
   </head>
   <body>
@@ -301,4 +303,5 @@
     <script src="main.js"></script>
   </body>
 </html>
+
 
