--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" href="/cv.png" type="image/png">
+   <link rel="shortcut icon" href="cv.png" type="image/png">
 
     <!-- ===== AOS ANIMATION ===== -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -438,3 +438,4 @@
     <script src="main.js"></script>
   </body>
 </html>
+
