--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       rel="stylesheet"
     />
 
-   <link rel="shortcut icon" href="cv.png" type="image/png">
+    <link rel="shortcut icon" href="cv.png" type="image/png">
+
 
     <!-- ===== AOS ANIMATION ===== -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -151,98 +152,100 @@
       </section>
 
       <!--===== SKILLS =====-->
-      <section class="skills section" id="skills">
-        <h2 class="section-title">Skills</h2>
+      <!--===== SKILLS =====-->
+<section class="skills section" id="skills">
+  <h2 class="section-title">Skills</h2>
 
-        <div class="skills__container bd-grid">
-          <div data-aos="fade-up">
-            <h2 class="skills__subtitle">Profesional Skills</h2>
-            <p class="skills__text">
-              As a Software Engineering student, I have been building a strong foundation in 
-              both programming and web technologies. My skills include working with 
-              <b>C, HTML, CSS, JavaScript, and SQL</b>, along with a growing interest in 
-              modern stacks like <b>MERN</b> and Java.  
-              <br><br>
-              I enjoy problem-solving, creating structured and efficient code, and designing 
-              user-friendly web applications. With every project, I aim to sharpen my logical 
-              thinking, improve code quality, and move closer to becoming a professional 
-              software engineer.
-            </p>
-            
-            <div class="skills-list">
-  <div class="skills__data">
-    <div class="skills__names">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/C_Logo.png" 
-           alt="C Logo" class="skills__icon" style="width:24px; height:24px;"/>
-      <span class="skills__name">C Programming</span>
-    </div>
-    <span class="skills__percentage">90%</span>
-    <div class="skills__bar">
-      <div class="skills__percentage-bar skills__c"></div>
-    </div>
-  </div>
-
-  <div class="skills__data">
-    <div class="skills__names">
-      <i class="bx bxl-html5 skills__icon"></i>
-      <span class="skills__name">HTML</span>
-    </div>
-    <span class="skills__percentage">60%</span>
-    <div class="skills__bar">
-      <div class="skills__percentage-bar skills__html"></div>
-    </div>
-  </div>
-
-  <div class="skills__data">
-    <div class="skills__names">
-      <i class="bx bxl-css3 skills__icon"></i>
-      <span class="skills__name">CSS</span>
-    </div>
-    <span class="skills__percentage">30%</span>
-    <div class="skills__bar">
-      <div class="skills__percentage-bar skills__css"></div>
-    </div>
-  </div>
-
-  <div class="skills__data">
-    <div class="skills__names">
-      <i class="bx bxl-javascript skills__icon"></i>
-      <span class="skills__name">JavaScript</span>
-    </div>
-    <span class="skills__percentage">25%</span>
-    <div class="skills__bar">
-      <div class="skills__percentage-bar skills__js"></div>
-    </div>
-  </div>
-
-  <div class="skills__data">
-    <div class="skills__names">
-      <i class="bx bx-data skills__icon"></i>
-      <span class="skills__name">SQL</span>
-    </div>
-    <span class="skills__percentage">70%</span>
-    <div class="skills__bar">
-      <div class="skills__percentage-bar skills__sql"></div>
-    </div>
-  </div>
-
-  <div class="skills__data">
-    <div class="skills__names">
-      <i class="bx bxs-paint skills__icon"></i>
-      <span class="skills__name">UX/UI</span>
-    </div>
-    <span class="skills__percentage">30%</span>
-    <div class="skills__bar">
-      <div class="skills__percentage-bar skills__ux"></div>
-    </div>
-  </div>
-</div>
-
-          <div data-aos="fade-left">
-            <img src="work3.jpg" alt="" class="skills__img" />
+  <div class="skills__container bd-grid">
+    <div data-aos="fade-up">
+      <h2 class="skills__subtitle">Profesional Skills</h2>
+      <p class="skills__text">
+        As a Software Engineering student, I have been building a strong foundation in 
+        both programming and web technologies. My skills include working with 
+        <b>C, HTML, CSS, JavaScript, and SQL</b>, along with a growing interest in 
+        modern stacks like <b>MERN</b> and Java.  
+        <br><br>
+        I enjoy problem-solving, creating structured and efficient code, and designing 
+        user-friendly web applications. With every project, I aim to sharpen my logical 
+        thinking, improve code quality, and move closer to becoming a professional 
+        software engineer.
+      </p>
+      
+      <div class="skills-list">
+        <div class="skills__data">
+          <div class="skills__names">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/C_Logo.png" 
+                 alt="C Logo" class="skills__icon" style="width:24px; height:24px;"/>
+            <span class="skills__name">C Programming</span>
+          </div>
+          <span class="skills__percentage">90%</span>
+          <div class="skills__bar">
+            <div class="skills__percentage-bar skills__c"></div>
           </div>
         </div>
-      </section>
+
+        <div class="skills__data">
+          <div class="skills__names">
+            <i class="bx bxl-html5 skills__icon"></i>
+            <span class="skills__name">HTML5</span>
+          </div>
+          <span class="skills__percentage">60%</span>
+          <div class="skills__bar">
+            <div class="skills__percentage-bar skills__html"></div>
+          </div>
+        </div>
+
+        <div class="skills__data">
+          <div class="skills__names">
+            <i class="bx bxl-css3 skills__icon"></i>
+            <span class="skills__name">CSS3</span>
+          </div>
+          <span class="skills__percentage">30%</span>
+          <div class="skills__bar">
+            <div class="skills__percentage-bar skills__css"></div>
+          </div>
+        </div>
+
+        <div class="skills__data">
+          <div class="skills__names">
+            <i class="bx bxl-javascript skills__icon"></i>
+            <span class="skills__name">JavaScript</span>
+          </div>
+          <span class="skills__percentage">25%</span>
+          <div class="skills__bar">
+            <div class="skills__percentage-bar skills__js"></div>
+          </div>
+        </div>
+
+        <div class="skills__data">
+          <div class="skills__names">
+            <i class="bx bx-data skills__icon"></i>
+            <span class="skills__name">SQL</span>
+          </div>
+          <span class="skills__percentage">70%</span>
+          <div class="skills__bar">
+            <div class="skills__percentage-bar skills__sql"></div>
+          </div>
+        </div>
+
+        <div class="skills__data">
+          <div class="skills__names">
+            <i class="bx bxs-paint skills__icon"></i>
+            <span class="skills__name">UX/UI</span>
+          </div>
+          <span class="skills__percentage">30%</span>
+          <div class="skills__bar">
+            <div class="skills__percentage-bar skills__ux"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div data-aos="fade-left">
+      <img src="work3.jpg" alt="Skills illustration" class="skills__img" />
+    </div>
+  </div>
+</section>
 
       <!--===== PROJECTS =====-->
       <!--===== PROJECTS =====-->
@@ -436,6 +439,8 @@
 
     <!--===== MAIN JS =====-->
     <script src="main.js"></script>
+
+    <!-- EmailJS SDK -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   </body>
 </html>
-
