--- a/index.html
+++ b/index.html
@@ -248,39 +248,39 @@
 </section>
 
       <!--===== PROJECTS =====-->
-      <!--===== PROJECTS =====-->
+
 <section class="projects section" id="projects">
   <h2 class="section-title">Projects</h2>
 
   <div class="projects__container bd-grid">
     <div class="project__card" data-aos="fade-up">
-      <div class="project__img">
-        <img src="work1.jpg" alt="Project 1" />
-        <div class="project__overlay">
-          <div class="project__links">
-            <a href="#" class="project__link"><i class="bx bx-link-external"></i></a>
-            <a href="#" class="project__link"><i class="bx bxl-github"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="project__info">
-        <h3 class="project__title">Portfolio Website</h3>
-        <p class="project__description">A responsive portfolio website built with HTML, CSS, and JavaScript to showcase my work and skills.</p>
-        <div class="project__tags">
-          <span class="project__tag">HTML</span>
-          <span class="project__tag">CSS</span>
-          <span class="project__tag">JavaScript</span>
-        </div>
+  <div class="project__img">
+    <img src="work1.jpg" alt="Project 1" />
+    <div class="project__overlay">
+      <div class="project__links">
+        <a href="https://nifad-hasan-h21.github.io/Portfolio-nifadh21/" class="project__link" target="_blank"><i class="bx bx-link-external"></i></a>
+        <a href="https://github.com/nifad-hasan-h21/Portfolio-nifadh21" class="project__link" target="_blank"><i class="bx bxl-github"></i></a>
       </div>
     </div>
+  </div>
+  <div class="project__info">
+    <h3 class="project__title">Portfolio Website</h3>
+    <p class="project__description">A responsive portfolio website built with HTML, CSS, and JavaScript to showcase my work and skills.</p>
+    <div class="project__tags">
+      <span class="project__tag">HTML</span>
+      <span class="project__tag">CSS</span>
+      <span class="project__tag">JavaScript</span>
+    </div>
+  </div>
+</div>
 
     <div class="project__card" data-aos="fade-up" data-aos-delay="100">
       <div class="project__img">
         <img src="work2.jpg" alt="Healthcare Management System" />
         <div class="project__overlay">
           <div class="project__links">
-            <a href="https://github.com/nifad-hasan-h21/Health-Care-Management-System" class="project__link" target="_blank"><i class="bx bx-link-external"></i></a>
-            <a href="https://github.com/nifad-hasan-h21/Health-Care-Management-System" class="project__link" target="_blank"><i class="bx bxl-github"></i></a>
+            <a href="https://github.com/nifad-hasan-h21/Library-Management-System." class="project__link" target="_blank"><i class="bx bx-link-external"></i></a>
+            <a href="https://github.com/nifad-hasan-h21/Library-Management-System." class="project__link" target="_blank"><i class="bx bxl-github"></i></a>
           </div>
         </div>
       </div>
