--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <h2 class="about__subtitle">I'm Nifad Hasan</h2>
             <p class="about__text">
               I am a passionate Software Engineering student at Daffodil International University, 
-              currently in my 3rd semester. Alongside my academic journey, I'm developing my 
+              currently in my 4th semester. Alongside my academic journey, I'm developing my 
               skills in web development, data structures, algorithms, and software design.  
               <br><br>
               I enjoy working on creative coding projects—ranging from building portfolio websites 
@@ -444,3 +444,4 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   </body>
 </html>
+
