--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
               <div class="skills__data" data-category="web">
                 <div class="skills__names">
                   <i class="bx bxl-html5 skills__icon"></i>
-                  <span class="skills__name">HTML5</span>
+                  <span class="skills__name">HTML</span>
                 </div>
                 <span class="skills__percentage">80%</span>
                 <div class="skills__bar">
@@ -223,7 +223,7 @@
               <div class="skills__data" data-category="web">
                 <div class="skills__names">
                   <i class="bx bxl-css3 skills__icon"></i>
-                  <span class="skills__name">CSS3</span>
+                  <span class="skills__name">CSS</span>
                 </div>
                 <span class="skills__percentage">70%</span>
                 <div class="skills__bar">
@@ -497,3 +497,4 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   </body>
 </html>
+
