--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
               <div class="skills__data" data-category="web">
                 <div class="skills__names">
                   <i class="bx bxl-html5 skills__icon"></i>
-                  <span class="skills__name">HTML</span>
+                  <span class="skills__name">HTML5</span>
                 </div>
                 <span class="skills__percentage">80%</span>
                 <div class="skills__bar">
@@ -223,7 +223,7 @@
               <div class="skills__data" data-category="web">
                 <div class="skills__names">
                   <i class="bx bxl-css3 skills__icon"></i>
-                  <span class="skills__name">CSS</span>
+                  <span class="skills__name">CSS3</span>
                 </div>
                 <span class="skills__percentage">70%</span>
                 <div class="skills__bar">
@@ -236,7 +236,7 @@
                   <i class="bx bxl-javascript skills__icon"></i>
                   <span class="skills__name">JavaScript</span>
                 </div>
-                <span class="skills__percentage">35%</span>
+                <span class="skills__percentage">65%</span>
                 <div class="skills__bar">
                   <div class="skills__percentage-bar skills__js" data-percentage="35"></div>
                 </div>
@@ -497,4 +497,5 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   </body>
 </html>
+
 
