--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <meta property="og:image" content="https://www.nifadhasan.com/about.jpg" />
     <meta property="og:url" content="https://www.nifadhasan.com/" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="google-site-verification" content="JVe-RKeH3exC761oKPctrx9ylil22VmhBJzmXpJ64GA" />
 
     <link rel="stylesheet" href="styles.css" />
 
@@ -728,3 +729,4 @@
     ></script>
   </body>
 </html>
+
