--- a/index.html
+++ b/index.html
@@ -207,6 +207,13 @@
         </div>
       </section>
 
+      <div style="display:none;">
+  <img src="nifad1.jpg" alt="Nifad Hasan portrait" />
+  <img src="nifad2.jpg" alt="Nifad Hasan studio photo" />
+  <img src="nifad3.jpg" alt="Nifad Hasan profile image" />
+</div>
+
+
       <!--===== ABOUT =====-->
       <section class="about section" id="about">
         <h2 class="section-title">About</h2>
@@ -729,4 +736,5 @@
     ></script>
   </body>
 </html>
+
 
