--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <i class="bx bxl-linkedin"></i>
           </a>
           <a
-            href="https://www.instagram.com/sick_m0dee/"
+            href="https://www.instagram.com/nifad_hasan_h21/"
             class="home__social-icon"
             target="_blank"
             aria-label="Instagram"
@@ -164,7 +164,7 @@
             <i class="bx bxl-instagram"></i>
           </a>
           <a
-            href="https://github.com/nifad-hasan-h21"
+            href="https://github.com/nifadhasanh21"
             class="home__social-icon"
             target="_blank"
             aria-label="GitHub"
@@ -420,13 +420,13 @@
               <div class="project__overlay">
                 <div class="project__links">
                   <a
-                    href="https://nifad-hasan-h21.github.io/Portfolio-nifadh21/"
+                    href="https://nifadhasanh21.github.io/Portfolio-nifadh21/"
                     class="project__link"
                     target="_blank"
                     ><i class="bx bx-link-external"></i
                   ></a>
                   <a
-                    href="https://github.com/nifad-hasan-h21/Portfolio-nifadh21"
+                    href="https://github.com/nifadhasanh21/Portfolio-nifadh21"
                     class="project__link"
                     target="_blank"
                     ><i class="bx bxl-github"></i
@@ -465,13 +465,13 @@
               <div class="project__overlay">
                 <div class="project__links">
                   <a
-                    href="https://github.com/nifad-hasan-h21/Library-Management-System."
+                    href="https://github.com/nifadhasanh21/Health-Care-Management-System."
                     class="project__link"
                     target="_blank"
                     ><i class="bx bx-link-external"></i
                   ></a>
                   <a
-                    href="https://github.com/nifad-hasan-h21/Library-Management-System."
+                    href="https://github.com/nifadhasanh21/Health-Care-Management-System."
                     class="project__link"
                     target="_blank"
                     ><i class="bx bxl-github"></i
@@ -511,13 +511,13 @@
               <div class="project__overlay">
                 <div class="project__links">
                   <a
-                    href="https://github.com/nifad-hasan-h21/Library-Management-System"
+                    href="https://github.com/nifadhasanh21/Library-Management-System-C"
                     class="project__link"
                     target="_blank"
                     ><i class="bx bx-link-external"></i
                   ></a>
                   <a
-                    href="https://github.com/nifad-hasan-h21/Library-Management-System"
+                    href="https://github.com/nifadhasanh21/Library-Management-System-C"
                     class="project__link"
                     target="_blank"
                     ><i class="bx bxl-github"></i
@@ -736,5 +736,6 @@
     ></script>
   </body>
 </html>
+
 
 
