Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -694,21 +694,21 @@
       <p class="footer__title">Nifad Hasan Eimu</p>
       <div class="footer__social">
         <a
-          href="https://www.linkedin.com/in/nifad-hasan-h21/"
+          href="https://www.linkedin.com/in/nifadhasanh21/"
           class="footer__icon"
           target="_blank"
         >
           <i class="bx bxl-linkedin"></i>
         </a>
         <a
-          href="https://www.instagram.com/sick_m0dee/"
+          href="https://www.instagram.com/nifad_hasan_h21/"
           class="footer__icon"
           target="_blank"
         >
           <i class="bx bxl-instagram"></i>
         </a>
         <a
-          href="https://github.com/nifad-hasan-h21"
+          href="https://github.com/nifadhasanh21"
           class="footer__icon"
           target="_blank"
         >
@@ -736,6 +736,7 @@
     ></script>
   </body>
 </html>
+
 
 
 
