Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -465,13 +465,13 @@
               <div class="project__overlay">
                 <div class="project__links">
                   <a
-                    href="https://github.com/nifadhasanh21/Health-Care-Management-System."
+                    href="https://github.com/nifadhasanh21/Health-Care-Management-System"
                     class="project__link"
                     target="_blank"
                     ><i class="bx bx-link-external"></i
                   ></a>
                   <a
-                    href="https://github.com/nifadhasanh21/Health-Care-Management-System."
+                    href="https://github.com/nifadhasanh21/Health-Care-Management-System"
                     class="project__link"
                     target="_blank"
                     ><i class="bx bxl-github"></i
@@ -736,6 +736,7 @@
     ></script>
   </body>
 </html>
+
 
 
 
