--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <meta property="og:image" content="https://www.nifadhasan.com/about.jpg" />
     <meta property="og:url" content="https://www.nifadhasan.com/" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="google-site-verification" content="JVe-RKeH3exC761oKPctrx9ylil22VmhBJzmXpJ64GA" />
+    <meta
+      name="google-site-verification"
+      content="JVe-RKeH3exC761oKPctrx9ylil22VmhBJzmXpJ64GA"
+    />
 
     <link rel="stylesheet" href="styles.css" />
 
@@ -79,7 +82,7 @@
     <title>Nifad Hasan Eimu | Web Developer</title>
   </head>
   <body>
-    <!--===== HEADER =====-->
+    <!-- ===== HEADER ===== -->
     <header class="l-header">
       <nav class="nav bd-grid">
         <div>
@@ -87,6 +90,7 @@
         </div>
 
         <div class="nav__menu" id="nav-menu">
+
           <ul class="nav__list">
             <li class="nav__item">
               <a href="#home" class="nav__link active">Home</a>
@@ -103,6 +107,18 @@
             <li class="nav__item">
               <a href="#education" class="nav__link">Education</a>
             </li>
+
+            <!-- ✅ Blog link -->
+            <li class="nav__item">
+              <a
+                href="https://blog.nifadhasan.com"
+                class="nav__link"
+                target="_blank"
+                rel="noopener"
+                >Blog</a
+              >
+            </li>
+
             <li class="nav__item">
               <a href="#contact" class="nav__link">Contact</a>
             </li>
@@ -126,6 +142,7 @@
         </div>
       </nav>
     </header>
+
 
     <main class="l-main">
       <!--===== HOME =====-->
@@ -193,7 +210,7 @@
                 class="home__blob-img"
                 x="50"
                 y="60"
-                href="IMG_2895.png"
+                href="/IMG_2895.png"
                 alt="Nifad Hasan Eimu"
               />
             </g>
@@ -207,12 +224,11 @@
         </div>
       </section>
 
-      <div style="display:none;">
-  <img src="nifad1.jpg" alt="Nifad Hasan portrait" />
-  <img src="nifad2.jpg" alt="Nifad Hasan studio photo" />
-  <img src="nifad3.jpg" alt="Nifad Hasan profile image" />
-</div>
-
+      <div style="display: none">
+        <img src="nifad1.jpg" alt="Nifad Hasan portrait" />
+        <img src="nifad2.jpg" alt="Nifad Hasan studio photo" />
+        <img src="nifad3.jpg" alt="Nifad Hasan profile image" />
+      </div>
 
       <!--===== ABOUT =====-->
       <section class="about section" id="about">
@@ -220,7 +236,7 @@
 
         <div class="about__container bd-grid">
           <div class="about__img" data-aos="fade-right">
-            <img src="about.jpg" alt="Nifad Hasan" />
+            <img src="about.jpeg" alt="Nifad Hasan" />
           </div>
 
           <div data-aos="fade-left">
@@ -545,7 +561,60 @@
               </div>
             </div>
           </div>
+
+          <!-- NEW: MERN Project -->
+        <div
+          class="project__card"
+          data-aos="fade-up"
+          data-aos-delay="300"
+          data-category="web javascript mern"
+        >
+          <div class="project__img">
+            <!-- Add your image later: tynecxio.jpg (same folder) -->
+            <img src="tynecxio.jpg" alt="TynecXio MERN Website" />
+            <div class="project__overlay">
+              <div class="project__links">
+                <a
+                  href="#"
+                  class="project__link"
+                  target="_blank"
+                  aria-label="Live demo"
+                  ><i class="bx bx-link-external"></i
+                ></a>
+                <a
+                  href="#"
+                  class="project__link"
+                  target="_blank"
+                  aria-label="GitHub"
+                  ><i class="bx bxl-github"></i
+                ></a>
+                <button
+                  class="project__link project__info-btn"
+                  data-project="4"
+                  aria-label="Project details"
+                >
+                  <i class="bx bx-info-circle"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <div class="project__info">
+            <h3 class="project__title">TynecXio (MERN)</h3>
+            <p class="project__description">
+              A full-stack MERN website with authentication, dashboard, and
+              modern UI — built with MongoDB, Express, React, and Node.
+            </p>
+            <div class="project__tags">
+              <span class="project__tag">MERN</span>
+              <span class="project__tag">React</span>
+              <span class="project__tag">Node.js</span>
+              <span class="project__tag">MongoDB</span>
+            </div>
+          </div>
         </div>
+        </div>
+        
       </section>
 
       <!--===== EDUCATION =====-->
@@ -736,8 +805,3 @@
     ></script>
   </body>
 </html>
-
-
-
-
-
